--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://dmytro-makhov.github.io/tchat",
   "dependencies": {
+    "cheerio": "^1.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "zustand": "^5.0.5"
